TPTP.jj
options{
    STATIC=false;
}
PARSER_BEGIN(TPTP)
import java.util.*;
import java.util.HashSet;

class Robot {
    public long X;
    public long Y;

    public Robot(){
        this.X = 0;
        this.Y = 0;
    }
}
class StepReference{
    public String stepName;
    public int lineNumber;

    public StepReference(String name, int line){
        this.stepName=name;
        this.lineNumber=line;
    }
}
class ConditionInfo{
    public String identifier;  // which parameter (ID1 or ID2)
    public int threshold;       // the NUM value
    
    public ConditionInfo(String id, int thresh) {
        this.identifier = id;
        this.threshold = thresh;
    }
}
class ArithExpression {
    public int numSum; // sum of all individuals non variable integers
    public int id1Count; // additive occurences of id1
    public int id2Count; // additive occurences of id2
    

    public ArithExpression(){
        this.numSum = 0;
        this.id1Count = 0;
        this.id2Count = 0;
    }

    //eval the value of this arithExpression with givens values of ID1,ID2
    public int eval(int ID1, int ID2){
        return numSum + (ID1 * id1Count) + (ID2 * id2Count);
    }

    //merge another ArithExpression with this one
    public void merge(ArithExpression other){
        this.numSum += other.numSum;
        this.id1Count += other.id1Count;
        this.id2Count += other.id2Count;
    }
    //S3 checker, for when x<d is false
    // expr is smallest at x=d as x>=d. Set other ID to 0 and check non-neg
    public boolean checkS3(boolean condUsesID1, int condThreshold){
        int result, ID1, ID2;

        if(condUsesID1){
            ID1 = condThreshold;
            ID2 = 0;
        }else{
            ID1 = 0;
            ID2 = condThreshold;
        }

        result = eval(ID1, ID2);
        return (result >= 0);
    }
}

public class TPTP {
    private Set<String> stepNames=new HashSet<String>(); //store step names
    private Set<String> parameterNames=new HashSet<String>();
    private String runStepName = null;
    private Map<String, StepReference> stepReferences = new HashMap<String,StepReference >(); //maps step names to their reference

    private static boolean nonSimple = false;
    private static int lastNumeral = 0;
    private static String currentID1 = null;
    private static String currentID2 = null;
    private static String firstNonSimpleStep=null;
    private static String currentStepName=null;
    
    public static void main( String[] args ) throws ParseException {
        TPTP parser = new TPTP( System.in ) ;
        try{
            parser.Program(); 
            System.out.println("Success");
            if(nonSimple){
                System.out.println("Non-simple");
                System.out.println("first non simple at step: "+firstNonSimpleStep);
            }else{
                System.out.println("Simple");
            }
        }
        catch(ParseException e){
            System.out.println("Failure");
            Token errorToken = e.currentToken;//Get token where error
            if(errorToken !=null){
                System.err.println(errorToken.beginLine); 
            }else{
                System.err.println("1");
            }
            String msg=e.getMessage();
            if(msg==null || msg.isEmpty()){
                msg="Unexpected token: "+ (errorToken != null? errorToken.image: "unknown");
            }
            System.err.println(msg);
            //
            //
        }
        catch(TokenMgrError e){
            System.out.println("Failure");
            String msg = e.getMessage();
            int lineIndex = msg.indexOf("line ");
            int commaIndex = msg.indexOf(",", lineIndex);
            int lineNum = 1;
            try {
                int lineIdx = msg.indexOf("line ");
                if (lineIdx != -1) {
                    int commaIdx = msg.indexOf(",", lineIdx);
                    if (commaIdx != -1) {
                        lineNum = Integer.parseInt(msg.substring(lineIdx + 5, commaIdx).trim());
                    }
                }
            } catch (Exception ex) {
                lineNum = 1;
            }
            System.err.println(lineNum);
            System.err.println("Lexical error: " + msg);
    
            // if (lineIndex != -1 && commaIndex != -1) {
            //     String lineNumber = msg.substring(lineIndex + 5, commaIndex);
            //     System.err.println(lineNumber);
            // } else {
            //     System.err.println("Unknown line");
            // }
        } 
        catch (Exception e){
            System.out.println("Failure");
            System.err.println("1");
            System.err.println("Internal errro"+e.getMessage());
        }
    }
    private static void markNonSimple(){
        if(!nonSimple && currentStepName!=null){
            firstNonSimpleStep=currentStepName; //records first step that caused to not be simple
            nonSimple = true;
        }
        
    }  
}
PARSER_END(TPTP)

//Tokens stuff


SKIP: {" " | "\n"|"\t"|"\r"} //skips

//reserved keywords 
TOKEN: {
    <RUN: "run"> |
    <IF: "if"> |
    <BECOMES: "becomes"> |
    <ELSE: "else"> | 
    <AND: "and">
}

//punctuation
TOKEN: {<COLON:":"> | <COMMA:","> | <LT:"<"> | <LPAREN:"("> | <RPAREN:")">|<SEMICOLON:";">}

//arithmetic
TOKEN: {<PLUS:"+"> | <MINUS:"-"> | <MULT:"*">}



//arithmetic numbers
TOKEN: {<NUMERAL: (["0"-"9"])+>|
        <IDENTIFIER: <LETTER>(<LETTER> | ["0"-"9"] | "_")*> |
        <LETTER: (["a"-"z"] | ["A"-"Z"])>
}
// unexpected symbols
TOKEN: {<UNEXPECTED: ~[]>}

void Program():{}
{
    (Step() <SEMICOLON>)+
    Run()
    ((<EOF>)| <UNEXPECTED>
    {
        throw new ParseException("Unexpected character: '" + token.image + "'");
    }
    )
    {
        if(!stepNames.contains(runStepName)){
            throw new ParseException("Step '" + runStepName + "' mentioned in run instruction does not exist.");
        }
    }
}
void pairID():{
    Token id1Tok;
    Token id2Tok;
    String id1;
    String id2;
}{
    <LPAREN> id1Tok = <IDENTIFIER> <COMMA> id2Tok=<IDENTIFIER> <RPAREN>
    {
        id1=id1Tok.image;
        id2=id2Tok.image;
        // recordParameterPair(token.beginLine, id1, id2);
    }
}
void Step():
{
    Token name;
    Token id1, id2;
    Token nextStep, elseStep;
    ConditionInfo cond;
    ArithExpression e1=null, e2=null, e3=null, e4=null;
    boolean isSimple;
}
{
    name = <IDENTIFIER>
    {
        //COnd 8
        if(stepNames.contains(name.image)){
            throw new ParseException("Duplicate step name: " + name.image);
        }
        stepNames.add(name.image);
        currentStepName=name.image;
    }
    
    <COLON> <IF> cond=Cond()
    // pairID()
    <LPAREN> id1 = <IDENTIFIER> <COMMA> id2=<IDENTIFIER> <RPAREN>
    {
        currentID1 = id1.image;
        currentID2 = id2.image;
        if (!cond.identifier.equals(id1.image) && !cond.identifier.equals(id2.image)) {
            throw new ParseException("Condition uses paramter: "+cond.identifier+" but must use parameter " + id1.image + " or " + id2.image);
        }
        if(stepNames.contains(id1.image)){
            throw new ParseException("Parameter name '" + id1.image 
            + "' conflicts with step name.");
        }
        if (stepNames.contains(id2.image)) {
            throw new ParseException("Parameter name '" + id2.image 
                + "' conflicts with step name.");
        }
         // Further Condition 6: id1 and id2 must be different
        if (id1.image.equals(id2.image)) {
            throw new ParseException("Parameter names must be different in step: " + name);
        }
        parameterNames.add(id1.image);
        parameterNames.add(id2.image);

    }
    (
    //optional long form
        <BECOMES> <LPAREN> e1=Expr(false) <COMMA> e2=Expr(false) <RPAREN> <AND>
    )?

    nextStep=<IDENTIFIER>
    {
        stepReferences.put(nextStep.image, new StepReference(nextStep.image, nextStep.beginLine));
    }
    <ELSE>

    //optional Long form branch False
    (
        <LPAREN> e3=Expr(true) <COMMA> e4=Expr(true) <RPAREN> <AND>
    )?
    elseStep=<IDENTIFIER>
    {
        stepReferences.put(elseStep.image, new StepReference(elseStep.image, elseStep.beginLine));
    }
}

ConditionInfo Cond():{
    Token condIDTok;
    Token numTok;
}
{
    
    condIDTok=<IDENTIFIER> <LT> numTok=<NUMERAL>
    { 
        int num=Integer.parseInt(numTok.image);
        return new ConditionInfo(condIDTok.image,num);
    }
}

void Run() :
{
    Token StepName;
    Token n1Token,n2Token;
}
{
    <RUN> StepName=<IDENTIFIER> <LPAREN> n1Token=<NUMERAL> <COMMA> n2Token=<NUMERAL> <RPAREN>
    {
        runStepName = StepName.image;
    }
}

ArithExpression Expr(boolean allowsNegatives):{
    ArithExpression exp = new ArithExpression();
    boolean termWasNumeral;
}
{
    Term(allowsNegatives,exp)
    ( "+" Term(allowsNegatives,exp)

    |
    "-" termWasNumeral=Term(allowsNegatives, exp)
    {
        //Rule s E1/E2 cannot have subtraction
        if (!allowsNegatives){
            markNonSimple();
        }
        //Rule p:
        if(!termWasNumeral){
            markNonSimple();
        } else{
            exp.numSum -= (2*lastNumeral); //double negate as added prevbiously
        }

    }
    )*
    {
        return exp;
    }
}
boolean Term(boolean allowsNegatives, ArithExpression exp):{
    boolean factorWasNumeral;
}
{
    factorWasNumeral=Factor(allowsNegatives,exp)
    (
        "*" Factor(allowsNegatives, exp)
        {
            //multiplication makes expression non positive
            markNonSimple();
        }
    )*
    {
        return factorWasNumeral;
    }
    
}

boolean Factor(boolean allowsNegatives, ArithExpression exp):
{
    Token numeralToken;
    Token idToken;
    int numeral;
    boolean isNumeral=false;
    boolean factorWasNumeral;
    ArithExpression nestedExp;
}
{
    (
        numeralToken = <NUMERAL>
        {
            isNumeral=true;
            numeral=Integer.parseInt(numeralToken.image);
            lastNumeral=numeral;
            exp.numSum +=numeral;
        }

        |
        idToken = <IDENTIFIER>
        {
            //must be ID1 or ID2
            if(idToken.image.equals(currentID1)){
                exp.id1Count++;
            } else if (idToken.image.equals(currentID2)){
                exp.id2Count++;
            } else{
                throw new ParseException("Identifier '" + idToken.image + "' is not a parameter in this step.");
            }
        }
        |
        <LPAREN> nestedExp=Expr(allowsNegatives) <RPAREN>
        {
            exp.merge(nestedExp);
        }
    )
    {
        return isNumeral;
    }
}
