TPTP.java
/* Generated By:JavaCC: Do not edit this line. TPTP.java */
import java.util.*;
import java.util.HashSet;

class ConditionInfo{
    public String identifier;  // which parameter (ID1 or ID2)
    public long threshold;       // the NUM value

    public ConditionInfo(String id, long thresh) {
        this.identifier = id;
        this.threshold = thresh;
    }
}
class ArithExpression {
    public long numSum; // sum of all individual constant terms
    public long id1Count; // coefficient of ID1
    public long id2Count; // coefficient of ID2


    public ArithExpression(){
        this.numSum = 0;
        this.id1Count = 0;
        this.id2Count = 0;
    }

    //eval the value of this arithExpression with givens values of ID1,ID2
    public long eval(long ID1, long ID2){
        return numSum + (ID1 * id1Count) + (ID2 * id2Count);
    }

    //merge another ArithExpression with this one - used for expressions like x+(1+y)
    public void merge(ArithExpression other){
        this.numSum += other.numSum;
        this.id1Count += other.id1Count;
        this.id2Count += other.id2Count;
    }
    //S3 checker, for when x<d is false - expression must be nonneg when cond is false
    // expr is smallest at x=d as x>=d. Set other ID to 0 and check non-neg
    public boolean checkS3(boolean condUsesID1, long condThreshold){
        long result, ID1, ID2;

        if(condUsesID1){
            ID1 = condThreshold;
            ID2 = 0;
        }else{
            ID1 = 0;
            ID2 = condThreshold;
        }

        result = eval(ID1, ID2);
        return (result >= 0);
    }
}
class State {
    String stepName;
    long x, y;
    boolean halted;

    public State(String stepName, long x, long y) {
        this.stepName = stepName;
        this.x = x;
        this.y = y;
        this.halted = false;
    }

    public boolean equals(State other) {
        if (this.halted && other.halted) return true;
        return this.stepName.equals(other.stepName) && this.x == other.x && this.y == other.y && this.halted == other.halted;
    }
}
class StepDef {
    public String name;
    public boolean condUsesID1;
    public long condThreshold;
    public ArithExpression e1, e2;
    public String nextStepTrue;
    public ArithExpression e3, e4;
    public String nextStepFalse;
}

public class TPTP implements TPTPConstants {
    //vars for steps
    private static Set<String> stepNames=new HashSet<String>(); //store step names
    private static Set<String> parameterNames=new HashSet<String>(); // stores param names
    private static Map<String, StepDef> stepDefs = new HashMap<String, StepDef>(); //used for interpreter
    private static Set<String> stepReferencesAndNames = new HashSet<String>(); // tracks defined steps and referenced steps

    //vars for runtime
    private static String runStepName = null;
    private static int runStepLine = 1;
    private static long runX = 0;
    private static long runY = 0;

    //vars for parsing context
    private static long lastNumeral = 0;
    private static String currentID1 = null;
    private static String currentID2 = null;
    private static String currentStepName=null;

    //simplicity tracking
    private static boolean nonSimple = false;
    private static String firstNonSimpleStep=null;

    //vars for loops
    private static final long MAX_COORDINATE = 1000000000L;// max coordinate for interpreter
    private static final String LOOP_DETECTED_STEP = "LOOP_DETECTED";

    /**
     * Checks condition 5: ensures step names aren't used as paramter names
     * everytime a stpe name is defined or referenced, check wasn't already referenced
     * @param name step name being mentioned
     * @param line the line number in the instructions
     * @throws ParseException if name already used as a parameter
     */
    private static void addStepMention(String name, int line) throws ParseException {
        if (parameterNames.contains(name)) { //throw error is trying to mention a step that already a parameter
            throw new ParseException(line + "|Identifier '" + name + "' is already used as a parameter and cannot be a step name.");
        }
        stepReferencesAndNames.add(name);
    }

    /**
     * Checks Cond 5 bidirectional - ensure parameter identitifer aren't mentioned as a step name
     * combines with addStepMention to allows forward and backward reference
     * @param name the parameter identifier being mention
     * @param line the line number in the instructions
     * @throws ParseException if name already used as a step name or reference
     */
    private static void addParamMention(String name, int line) throws ParseException { //safely adds parameters
        if (stepReferencesAndNames.contains(name)) { //if parameter defined that is mentioned as a step, throw error
            throw new ParseException(line + "|Identifier '" + name + "' is already used as a step name/reference and cannot be a parameter.");
        }
        parameterNames.add(name);
    }
    /**
     * Attempts to create specific error messages by decoding expectedTokenSequences
     * @param e ParseException thrown by parser
     * @return custom error string to be outputed
     */
    private static String decodeMessage(ParseException e) {
        if (e.currentToken == null) return e.getMessage();

        Token current = e.currentToken;
        Token next = current.next;
        if (next == null) return e.getMessage();

        String encountered = next.image;
        if (encountered == null) encountered = "";
        String currentImg = current.image;
        if (currentImg == null) currentImg = "";

        if (next.kind == 0) {
            return "Unexpected end of file.";
        }

        // check expected tokens
        boolean expectsEOF = false;
        boolean expectsLT = false;
        boolean expectsIDENTIFIER = false;
        boolean expectsSEMICOLON = false;
        boolean expectsLPAREN = false;

        if (e.expectedTokenSequences != null && tokenImage != null) {
            for (int[] seq : e.expectedTokenSequences) {
                for (int kind : seq) {
                    if (kind >= 0 && kind < tokenImage.length) {
                        String img = tokenImage[kind];
                        if ("\"<\"".equals(img)) expectsLT = true;
                        if ("<EOF>".equals(img)) expectsEOF = true;
                        if ("<IDENTIFIER>".equals(img)) expectsIDENTIFIER = true;
                        if ("\";\"".equals(img)) expectsSEMICOLON = true;
                        if ("\"(\"".equals(img)) expectsLPAREN = true;
                    }
                }
            }
        }

        // Pattern-match common mistakes

        //No steps befoe run instruction
        if (expectsIDENTIFIER && "run".equals(encountered)) {
            return "Program must contain at least one step definition before the run instruction.";
        }
        //Missing semicolon after step definition
        if (expectsSEMICOLON && "run".equals(encountered)) {
            return "Expected semicolon after step definition.";
        }
        //SemiCOlon after run instruction
        if (expectsEOF && ";".equals(encountered)) {
            return "Unexpected semicolon after the run instruction.";
        }

        //Arithmetric operation in condition - breaks rule of ID<NUM
        if (expectsLT && ("+".equals(encountered) || "-".equals(encountered) || "*".equals(encountered))) {
            return "Condition is not of the form ID<NUM; found arithmetic operation: '"+encountered+"''.";
        }

        //parentheses surrounding condition
        if ("if".equals(currentImg) && "(".equals(encountered)) {
            return "Syntax error: expected an identifier after \"if\"; got \"(\".";
        }

        //unexpected semicolon- generic
        if (";".equals(encountered)) {
             return "Unexpected semicolon.";
        }

        //missing open paranthesis for parameters:
        if (expectsLPAREN && !encountered.equals("(")) {
            return "Expected opening parenthesis before parameter list, got '" + encountered + "'.";
        }
        // unexpected end of file during step definition
        if (expectsSEMICOLON && next.kind == 0) {
            return "Unexpected end of file. Expected semicolon after step definition.";
        }

        // no comma beteen paramters
        if (expectsIDENTIFIER && ",".equals(currentImg) && !encountered.equals(",")) {
            return "Expected comma separating parameters in step definition.";
        }

        // try and reconstruct a meaningful error
        StringBuilder expectedStr = new StringBuilder();
        if (e.expectedTokenSequences != null && tokenImage != null) {
            for (int i = 0; i < e.expectedTokenSequences.length; i++) {
                for (int j = 0; j < e.expectedTokenSequences[i].length; j++) {
                    int kind = e.expectedTokenSequences[i][j];
                    if (kind >= 0 && kind < tokenImage.length) {
                        String exp = tokenImage[kind];
                        if (exp.startsWith("\"") && exp.endsWith("\"")) {
                            exp = exp.substring(1, exp.length() - 1);
                        }
                        if (expectedStr.indexOf(exp) == -1) {
                            expectedStr.append(exp).append(" ");
                        }
                    }
                }
            }
        }

        String exp = expectedStr.toString().trim().replace(" ", ", ");
        if (exp.isEmpty()) {
            return "Syntax error: unexpected token '" + encountered + "'.";
        }
        return "Syntax error: unexpected token '" + encountered + "'. Expected one of: " + exp + ".";
    }

    public static void main( String[] args ) throws ParseException {
        TPTP parser = new TPTP( System.in ) ;
        try{
            parser.Program();
            System.out.println("Success");
            if(nonSimple){
                System.out.println("Non-simple");
                System.out.println(firstNonSimpleStep);
            }else{
                System.out.println("Simple");
                executeInterpreter();
            }
        }
        catch(ParseException e){
            System.out.println("Failure");
            if (e.currentToken == null) {
                // A custom ParseException where we prefix line number inside the message
                String msg = e.getMessage();
                if (msg != null && msg.contains("|")) {
                    int pipeIdx = msg.indexOf('|');
                    String lineStr = msg.substring(0, pipeIdx);
                    System.err.println(lineStr);
                    System.err.println(msg.substring(pipeIdx + 1));
                } else {
                    System.err.println("1");
                    System.err.println(msg != null ? msg : "Unknown syntax error");
                }
            } else {
                // An auto-generated JavaCC parse error - make our own
                Token errorToken = e.currentToken.next;
                if (errorToken != null) {
                    System.err.println(errorToken.beginLine);
                } else {
                    System.err.println("1");
                }
                System.err.println(decodeMessage(e));
            }
        }
        catch(TokenMgrError e){
            System.out.println("Failure");
            String msg = e.getMessage();
            int lineNum = 1;
            try {
                int lineIdx = msg.indexOf("line ");
                if (lineIdx != -1) {
                    int commaIdx = msg.indexOf(",", lineIdx);
                    if (commaIdx != -1) {
                        lineNum = Integer.parseInt(msg.substring(lineIdx + 5, commaIdx).trim());
                    }
                }
            } catch (Exception ex) {
                lineNum = 1;
            }
            System.err.println(lineNum);
            System.err.println("Lexical error: " + msg);
        }
        catch (Exception e){
            System.out.println("Failure");
            System.err.println("1");
            System.err.println("Internal error: "+e.getMessage());
        }
    }
    //
    /**
     * Marks current step as non-simple - if not done before previously
     * called by simplicity rules
     * does nothing after first recording
     */
    private static void markNonSimple(){
        if(!nonSimple && currentStepName!=null){
            firstNonSimpleStep=currentStepName;//records the first step that broke simplicity
            nonSimple = true;
        }

    }
    // 

    /**
     * execute a step of robots movement from current state by evaluating step condition and applying appropriate arith expression
     * produces new coords and new step name
     * @param current the current state of interpreter - step name, x and y coords
     * @return next state after applying appropriate branch of Step cond
     */
    private static State getNextState(State current) {
        if (current.x > MAX_COORDINATE  || current.y > MAX_COORDINATE) { //check coords aren't bigger than max coords
            // Halt and return a special state to trigger "Loop" output
            State loopState = new State(LOOP_DETECTED_STEP, -1, -1);
            loopState.halted = true;
            return loopState;
        }
        StepDef def = stepDefs.get(current.stepName);
        if (def == null) {
            //Step doesn't exist halt at current pos
            State next = new State(current.stepName, current.x, current.y);
            next.halted = true;
            return next;
        }

        //extract condval and check coordinate<threshold
        long condVal = def.condUsesID1 ? current.x : current.y;
        boolean condTrue = condVal < def.condThreshold;

        //if cond true use e1,e2 and go NSTEP
        //else go e3,e4 and go ESTEP
        ArithExpression ex1 = condTrue ? def.e1 : def.e3;
        ArithExpression ex2 = condTrue ? def.e2 : def.e4;
        String nextStep = condTrue ? def.nextStepTrue : def.nextStepFalse;

        //Loop acceleration - took me a while
        // if step loops to istelf, skip ahead nathematically

        if (nextStep.equals(current.stepName)) {
            //detect simple update patterns i.e x+constant or y+constant or constants like (x,constant)
            boolean xIdentity = (ex1.id1Count == 1 && ex1.id2Count == 0); //x+c
            boolean yIdentity = (ex2.id1Count == 0 && ex2.id2Count == 1); //y+c
            boolean xConst = (ex1.id1Count == 0 && ex1.id2Count == 0); //constant in x
            boolean yConst = (ex2.id1Count == 0 && ex2.id2Count == 0); // constant in y

            //can only accelerate if each coordinate follows one of the paterns
            boolean canAccelerate = (xIdentity || xConst) && (yIdentity || yConst);
            if (canAccelerate) {
                long dx = xIdentity ? ex1.numSum : 0;
                long dy = yIdentity ? ex2.numSum : 0;

                if (def.condUsesID1 && dx == 0) {
                    // Condition checks x but x never changes
                    //infinite loop
                    State loopState = new State(LOOP_DETECTED_STEP, -1, -1);
                    loopState.halted = true;
                    return loopState;
                }
                if (!def.condUsesID1 && dy == 0) {
                    // Condition checks y but y never changes
                    //infinite loop
                    State loopState = new State(LOOP_DETECTED_STEP, -1, -1);
                    loopState.halted = true;
                    return loopState;
                }

                if (condTrue) {
                    //skip iterations until cond is false - calculate how many
                    if (def.condUsesID1 && xIdentity && dx > 0) { //x inbcreasing, skip till x>=threshold

                        //calculate how many steps until x>= threshold with ceil
                        long steps = (def.condThreshold - current.x + dx - 1) / dx;

                        if (steps > 0) {
                            long newX = current.x + steps * dx;
                            long newY = yIdentity ? current.y + steps * dy : ex2.numSum;
                            return new State(nextStep,newX,newY);
                        }
                    } else if (!def.condUsesID1 && yIdentity && dy > 0) { //y increasing, skip till y>=threshold
                        //calculate how many steps until y>= threshold with ceil
                        long steps = (def.condThreshold - current.y + dy - 1) / dy;
                        if (steps > 0) {
                            long newX = xIdentity ? current.x + steps * dx : ex1.numSum;
                            long newY = current.y + steps * dy;
                            return new State(nextStep, newX, newY);
                        }
                    }
                } else {
                    //cond is false, skip until true
                    if (def.condUsesID1 && xIdentity && dx < 0) { //x is decreasing, skip till x<threshold

                        long steps = (current.x - def.condThreshold) / (-dx) + 1;
                        if (steps > 0) {
                            long newX = current.x + steps * dx;
                            long newY = yIdentity ? current.y + steps * dy : ex2.numSum;
                            return new State(nextStep, newX, newY);
                        }
                    } else if (!def.condUsesID1 && yIdentity && dy < 0) { //y is decreasing, skip till y<threshold

                        long steps = (current.y - def.condThreshold) / (-dy) + 1;
                        if (steps > 0) {
                            long newX = xIdentity ? current.x + steps * dx : ex1.numSum;
                            long newY = current.y + steps * dy;
                            return new State(nextStep, newX, newY);
                        }
                    }
                }
            }
        }
        // can't accelerate
        // apply the arithexpressions and move to next step
        return new State(nextStep, ex1.eval(current.x, current.y), ex2.eval(current.x, current.y));
    }
    /**
     * Runs interpeter with Floyd Cycle-detection alg - hare and tortoise
     * hare travels twice the speed of tortoise per iteration
     * if equal states occupied, cycle detected
     * if either reaches halt state, print required info of final step name and coordinates of hare/tortois
     * See reference below for idea
     */
    private static void executeInterpreter() {
        State tortoise = new State(runStepName, runX, runY);
        State hare = new State(runStepName, runX, runY);
        // https://www.youtube.com/watch?v=S5TcPmTl6ww
        while (true) {

            //move hare twice
            hare = getNextState(hare);
            if(hare.stepName.equals(LOOP_DETECTED_STEP)){
                System.out.println("Loop");
                return;

            }
            if (hare.halted) {
                System.out.println(hare.stepName + " " + hare.x + " " + hare.y);
                return;
            }
            hare = getNextState(hare);
            if(hare.stepName.equals(LOOP_DETECTED_STEP)){
                System.out.println("Loop");
                return;

            }
            if (hare.halted) {
                System.out.println(hare.stepName + " " + hare.x + " " + hare.y);
                return;
            }
            //move tortoise once
            tortoise = getNextState(tortoise);

            //if equal
            if (hare.equals(tortoise)) { //loop detected
                System.out.println("Loop");
                return;
            }
        }
    }

/**
 * Parse program
 * Checks Cond 10 and that run step is valid/exists
 */
  final public void Program() throws ParseException {
    Token t=null;
    label_1:
    while (true) {
      Step();
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    Run();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
            //checks run Step is valid/exists
            if(!stepNames.contains(runStepName)){
                    {if (true) throw new ParseException(runStepLine+"|Step '" + runStepName + "' mentioned in run instruction does not exist.");}
            }
      break;
    case UNEXPECTED:
      t = jj_consume_token(UNEXPECTED);
            //cond 10 - step name in run must be present
            {if (true) throw new ParseException(t.beginLine+"|Unexpected character: '" + token.image + "'");}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
 * Parses a step defintion of the form:
 *  "STEP: if COND (ID1, ID2) [becomes (E1, E2) and] NSTEP else [(E3, E4) and] ESTEP"  
 * ensures arithmetic expression all follow positive-linear rules
 * Checks cond 5,6 and 8
 * Evaluates s3 simplicity in elseStep for interpreter
 */
  final public void Step() throws ParseException {
    Token name;
    Token id1, id2;
    Token nextStep, elseStep;
    ConditionInfo cond;
    ArithExpression e1=null, e2=null, e3=null, e4=null;
    StepDef def = new StepDef();
    name = jj_consume_token(IDENTIFIER);
        //Cond 8
        if(stepNames.contains(name.image)){
            {if (true) throw new ParseException(name.beginLine+"|Duplicate step name: " + name.image);}
        }
        //Cond 5: step name cannot be same as earlier param name
        addStepMention(name.image, name.beginLine);
        stepNames.add(name.image);
        currentStepName=name.image;
        def.name = name.image;
    jj_consume_token(COLON);
    jj_consume_token(IF);
    cond = Cond();
    jj_consume_token(LPAREN);
    id1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    id2 = jj_consume_token(IDENTIFIER);
    jj_consume_token(RPAREN);
        currentID1 = id1.image;
        currentID2 = id2.image;
        //Cond 5 bidirectional, check params against previous steps mentioned
        addParamMention(id1.image, id1.beginLine);
        addParamMention(id2.image, id2.beginLine);

         // Further Condition 6: params id1 and id2 must be different
        if (id1.image.equals(id2.image)) {
            {if (true) throw new ParseException(id2.beginLine+"|Parameter names must be different in step: " + name);}
        }
        //condition must use ID1 or ID2
        if (!cond.identifier.equals(id1.image) && !cond.identifier.equals(id2.image)) {
            {if (true) throw new ParseException(id1.beginLine+"|Condition uses parameter '" + cond.identifier
                + "' but must use either '" + id1.image + "' or '" + id2.image + "'.");}
        }


        //sets defaults and is overriden if the clause "[becomes (E1, E2) and]" is added
        def.condUsesID1 = cond.identifier.equals(id1.image);
        def.condThreshold = cond.threshold;
        ArithExpression defaultE1 = new ArithExpression(); defaultE1.id1Count = 1;
        ArithExpression defaultE2 = new ArithExpression(); defaultE2.id2Count = 1;
        def.e1 = defaultE1; def.e2 = defaultE2;
        def.e3 = defaultE1; def.e4 = defaultE2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BECOMES:
      jj_consume_token(BECOMES);
      jj_consume_token(LPAREN);
      e1 = Expr(false);
      jj_consume_token(COMMA);
      e2 = Expr(false);
      jj_consume_token(RPAREN);
      jj_consume_token(AND);
            def.e1 = e1;
            def.e2 = e2;
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    nextStep = jj_consume_token(IDENTIFIER);
        def.nextStepTrue = nextStep.image;
        addStepMention(nextStep.image, nextStep.beginLine);
    jj_consume_token(ELSE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      e3 = Expr(true);
      jj_consume_token(COMMA);
      e4 = Expr(true);
      jj_consume_token(RPAREN);
      jj_consume_token(AND);
            def.e3 = e3;
            def.e4 = e4;
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    elseStep = jj_consume_token(IDENTIFIER);
        def.nextStepFalse = elseStep.image;
        addStepMention(elseStep.image, elseStep.beginLine);
        //S3 check - when cond is false and make sure val>=0
        boolean condUsesID1=cond.identifier.equals(currentID1);
        if(e3!=null){
            if(!e3.checkS3(condUsesID1, cond.threshold)){
            markNonSimple();
            }
        }
        if(e4!=null){
            if(!e4.checkS3(condUsesID1, cond.threshold)){
            markNonSimple();
            }
        }
        stepDefs.put(name.image, def); // save info to stepDefs for interpreter to find

  }

/**
 * Parses conditions of the form ID<NUM
 * @return ConditionInfo with threshold val and param name
 */
  final public ConditionInfo Cond() throws ParseException {
    Token condIDTok;
    Token numTok;
    condIDTok = jj_consume_token(IDENTIFIER);
    jj_consume_token(LT);
    numTok = jj_consume_token(NUMERAL);
        long num=Long.parseLong(numTok.image);
        {if (true) return new ConditionInfo(condIDTok.image,num);}
    throw new Error("Missing return statement in function");
  }

//
/** Parses the run section
 * Records starting stepname, intial x and y coords for interpreter
 */
  final public void Run() throws ParseException {
    Token StepName;
    Token n1Token,n2Token;
    jj_consume_token(RUN);
    StepName = jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    n1Token = jj_consume_token(NUMERAL);
    jj_consume_token(COMMA);
    n2Token = jj_consume_token(NUMERAL);
    jj_consume_token(RPAREN);
        runStepName = StepName.image;
        runStepLine = StepName.beginLine;
        //cond 10 - is validated in main
        addStepMention(runStepName, runStepLine);
        runX = Long.parseLong(n1Token.image);
        runY = Long.parseLong(n2Token.image);
  }
